--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-**/.vscode/*
 **/.alpackages
-**/.altemplates
+**/.snapshots
+
+**/.vscode/*
 !**/.vscode/settings.json
 !**/.vscode/launch.json
+
+**/.altemplates
 *.app
 *.log
+
 ~$velopment Test - Customer Log Management.docx
